add google chart to webpage

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 
 <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
+    <div id="chart" style="width: 95%; height: 500px;"></div>
+    <h4>add new temperature</h4>
     <form action="/addDataForm" method="post">
         <ul>
             <li>
